--- a/src/style.css
+++ b/src/style.css
@@ -216,3 +216,16 @@
 .combo-box-base:disabled {
     -fx-opacity: .4;
 }
+
+#TabButton {
+    -fx-background-color: #4D65C6;
+    -fx-border-color: #B0E7EF;
+    -fx-border-radius: 5;
+    -fx-text-fill: white;
+}
+
+#TabButton:hover {
+    -fx-border-color: #666666;
+    -fx-border-radius: 5;
+    -fx-effect: dropshadow( gaussian, lightgray, 10 , 0.0 , 0 , 0 );
+}
